Fixed banner spacing.

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -1,4 +1,3 @@
-
 body {
 	margin: 0;
 	font-family: "K2D";
@@ -76,10 +75,6 @@ input[type="submit"] {
 	border-radius: 20px;
 	margin-bottom: 16px;
 	box-shadow: 5px 5px 5px #241930;
-}
-
-.main-banner h1 {
-	padding-top: 16px;
 }
 
 /* Styling for "round-row" tables. */
